@@ -2272,7 +2272,7 @@ name|info
 init|=
 name|Writables
 operator|.
-name|getHRegionInfo
+name|getHRegionInfoOrNull
 argument_list|(
 name|rowResult
 operator|.
@@ -2288,6 +2288,15 @@ name|REGIONINFO_QUALIFIER
 argument_list|)
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|info
+operator|==
+literal|null
+condition|)
+return|return
+literal|true
+return|;
 name|HTableDescriptor
 name|desc
 init|=
